--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "scripts": {
     "test": "jest",
+    "test:prod": "jest production_tests/",
+    "test:e2e": "jest e2e_tests/",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
@@ -49,6 +51,7 @@
     "seed": "node prisma/seed.js"
   },
   "devDependencies": {
+    "imap-simple": "^5.1.0",
     "jest": "^30.2.0",
     "supertest": "^7.2.2"
   }
