feat: Implement core backend functionality including models, controllers, services, routes, middleware, and comprehensive testing infrastructure.

--- a/.env.example
+++ b/.env.example
@@ -8,10 +8,16 @@ DATABASE_URL="postgresql://user:password@localhost:5432/edgestone_db?schema=publ
 JWT_SECRET=your_jwt_secret_key_here
 JWT_EXPIRES_IN=1d
 
-# Zoho Mail (IMAP - Incoming)
-ZOHO_EMAIL=support@edgestone.in
-ZOHO_PASSWORD=your_zoho_app_password
+# Zoho Mail Credentials
+MAIL_USER="support@edgestone.in"
+MAIL_PASSWORD="your_zoho_app_password"
 
-# Zepto Mail (SMTP - Outgoing)
-ZEPTO_USERNAME=emailapikey
-ZEPTO_PASSWORD=your_zepto_api_key
+# IMAP Configuration (Zoho – incoming mail)
+IMAP_HOST="imappro.zoho.in"
+IMAP_PORT=993
+IMAP_SECURE=true
+
+# SMTP Configuration (Zoho – outgoing mail, STARTTLS on 587)
+SMTP_HOST="smtppro.zoho.in"
+SMTP_PORT=587
+SMTP_SECURE=false
