--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "nodemailer": "^7.0.13",
     "nodemon": "^3.1.11",
     "prisma": "^5.22.0",
+    "resend": "^6.9.2",
     "uuid": "^13.0.0",
     "winston": "^3.19.0",
     "zeptomail": "^7.0.1"
